--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^5.1.1",
     "@react-google-maps/api": "^2.20.3",
@@ -26,6 +27,7 @@
     "next": "^14.2.14",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
+    "react-countdown": "^2.3.6",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
@@ -33,6 +35,7 @@
     "react-hook-form": "^7.59.0",
     "react-icons": "^5.3.0",
     "react-images-uploading": "^3.1.7",
+    "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
     "react-scroll": "^1.9.0",
     "react-transition-group": "^4.4.5",
