--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
     "react-dropzone": "^14.3.5",
+    "react-flatpickr": "^4.0.11",
     "react-hook-form": "^7.59.0",
     "react-icons": "^5.3.0",
     "react-images-uploading": "^3.1.7",
