--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
     "react-images-uploading": "^3.1.7",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.9.0",
-    "react-signature-canvas": "^1.1.0-alpha.2",
     "react-select": "^5.10.2",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "react-transition-group": "^4.4.5",
     "reactjs-tiptap-editor": "^0.1.11",
     "socket.io-client": "^4.8.1",
