--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@react-google-maps/api": "^2.20.3",
     "@reduxjs/toolkit": "^2.3.0",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^1.7.7",
     "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
