--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-scroll": "^1.9.0",
     "react-select": "^5.10.2",
     "react-signature-canvas": "^1.1.0-alpha.2",
+    "react-step-progress-bar": "^1.0.3",
     "react-transition-group": "^4.4.5",
     "reactjs-tiptap-editor": "^0.1.11",
     "socket.io-client": "^4.8.1",
