--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "react-step-progress-bar": "^1.0.3",
     "react-transition-group": "^4.4.5",
     "reactjs-tiptap-editor": "^0.1.11",
+    "sharp": "^0.34.3",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.15.0",
     "swiper": "^11.2.8",
+    "tesseract.js": "^6.0.1",
     "uuid4": "^2.0.3",
     "zod": "^3.25.71"
   },
