--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^5.1.1",
-    "@react-google-maps/api": "^2.20.3",
+    "@react-google-maps/api": "^2.20.7",
     "@reduxjs/toolkit": "^2.3.0",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.7.7",
@@ -38,6 +38,7 @@
     "react-draggable": "^4.4.6",
     "react-dropzone": "^14.3.5",
     "react-flatpickr": "^4.0.11",
+    "react-form-stepper": "^2.0.3",
     "react-hook-form": "^7.59.0",
     "react-icons": "^5.3.0",
     "react-images-uploading": "^3.1.7",
