--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "next": "^14.2.14",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
     "react-countdown": "^2.3.6",
