--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hook-form": "^7.59.0",
     "react-icons": "^5.3.0",
     "react-images-uploading": "^3.1.7",
+    "react-number-format": "^5.4.4",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
