--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment-timezone": "^0.5.46",
     "next": "^14.2.14",
     "next-auth": "^4.24.11",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
     "react-countdown": "^2.3.6",
